further fixed some overflow styling issues

--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -272,6 +272,7 @@ pre {
   background-color: #f0f0f0;
 
   > code {
+    overflow-x: auto;
     display: block;
     padding: 20px!important;
     background-color: transparent;
