--- a/_sass/yat/_dark.scss
+++ b/_sass/yat/_dark.scss
@@ -1,5 +1,5 @@
-$dark-background-color:       #0e0e0e !default;
-$dark-text-color: #bbb !default;
+$dark-background-color:       #282a36 !default;
+$dark-text-color: #f8f8f2 !default;
 
 html[data-theme="dark"]  {
   &[data-scroll-status='top'] {
@@ -224,6 +224,28 @@ html[data-theme="dark"]  {
     background-color: #282a36;
   }
 
+  /**
+   * Other additions
+   */
+
+  .post-nav {
+    a {
+      color: $dark-text-color
+    }
+
+    .previous:before {
+      border-color: #ff5100
+    }
+    .next:after {
+      border-color: #ff5100
+    }
+  }
+
+  .post-related {
+    ul a {
+      color: darken($dark-text-color, 10%)
+    }
+  }
 
 }
 
